# mark2

./: .env.example  .gitignore  AGENTS.md  AI_AGENT_DESIGN.md  CLAUDE.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  MAS_DEPLOYMENT_GUIDE.md  MAS_TOOLS_README.md  MIGRATION_SUMMARY.md  Mark2_arm64_latest.dmg  PLUGIN_ARCHITECTURE_FINAL.md  PLUGIN_ARCHITECTURE_V2.md  PLUGIN_MIGRATION.md  PLUGIN_SYSTEM_FINAL.md  PROGRESS.md  QUICK_REFERENCE.md  README.en.md  README.md  README.zh-TW.md  SOLUTION_SUMMARY.md  TAB_ARCHITECTURE.md  TRULY_DECOUPLED_PLUGINS.md  build-mas.js  builder.config.json  check-deps.js  electron-builder.json  fetch_dau_data.py  generate_icon.py  help.md  index.html  install.sh  keyword-highlighter.js  keywords.json  ldt-browser.js  main.js  package-lock.json  package.json  preload.js  release-github.sh  (+9 more)
assets/: icon.icns  make_icns.sh  round_icon.sh
docs/: ARCHITECTURE.md  DEBUG_CONVENTIONS.md  DEBUG_LOGGER.md  DEVELOPMENT.md  REFACTOR_BLUEPRINT.md  REFACTOR_CHECKLIST.md  WORKFLOW_DESIGN.md  ai-assistant-plan.md  ai-task-execution-test.md  ai-workflow-design.md  demo-keyword-highlight.md  demo-todo-list.md  help.md  mac-app-store-release.md  server-api.md  task-mode-ui-integration.md  url-to-markdown.md  welcome-workspace-plan.md
plugins/: ARCHITECTURE.md  BasePlugin.js  PLUGIN_INSTALLER.md  PluginManager.js  README.md
scripts/: build-and-upload-mas.js  build-dmg.js  build-mas.js  fix-mas-build.js  rebuild-native.js  setup-build-env.js  trigger-github-builds.sh  upload-mas.js  version-bump.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: Info.plist  Mark2-dmg.entitlements  Mark2.entitlements
src-tauri/prompts/: README.md  content_generator.json  task_planner.json
src-tauri/resources/certs/: mcp-cert.pem  mcp-key.pem
src-tauri/src/: ai_proxy.rs  cloud_keyring.rs  default_handler.rs  file_tools.rs  fs_commands.rs  image_proxy.rs  macos_security.rs  main.rs  media_stream.rs  menu.rs  plugin_loader.rs  pty.rs  security_scope.rs  spreadsheet.rs  window_state.rs
src-tauri/src/ai/: config.rs  executor.rs  mod.rs  prompts.rs  provider.rs  state.rs  task_executor.rs
src-tauri/src/vault/: commands.rs  crypto.rs  generator.rs  keychain.rs  mod.rs  store.rs
styles/: about.css  account-popover.css  ai-file-task.css  ai-sidebar.css  ai.css  app.css  card-sidebar.css  cloud-folder.css  code-editor.css  codemirror-markdown.css  dark-theme.css  editor.css  file-tree.css  fonts.css  highlight.css  html-viewer.css  image-modal.css  image-viewer.css  layout.css  light-theme.css  mac-layout.css  markdown-editor-highlight.css  markdown-enhanced.css  markdown-toolbar.css  media-viewer.css  non-mac-layout.css  pdf-viewer.css  platform-ui-dark.css  platform-ui-light.css  platform-ui.css  scratchpad.css  search.css  settings.css  spreadsheet-viewer.css  terminal-panel.css  terminal-sidebar.css  toc-panel.css  translator.css  updater-toast.css  vault.css  (+1 more)
tests/: aiFileTask.test.js  aiMarkdownOutputRules.test.js  clipboardEnhancer.test.js  documentReliability.test.js  imageResolver.test.js  inlineCompletion.test.js  markdownCodeMode.test.js  workspaceUntitledPersistence.test.js  (+1 more)
(+432 files in other folders)
