[package]
name = "mark2-tauri"
version = "1.0.0"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = [] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = { version = "2.4", features = ["watch"] }
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
font-kit = { version = "0.12", default-features = false, features = ["source"] }
base64 = "0.21"
headless_chrome = "1.0"
urlencoding = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["std"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSOpenPanel", "NSSavePanel", "NSPanel", "NSWindow", "NSResponder"] }
