[package]
name = "mark2-tauri"
version = "1.7.2"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = [] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = { version = "2.4", features = ["watch"] }
tauri-plugin-shell = "2.3"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-global-shortcut = "2.3"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "time"] }
axum = { version = "0.7", features = ["macros", "json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
font-kit = { version = "0.12", default-features = false, features = ["source"] }
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "stream"] }
parking_lot = "0.12"
futures-util = "0.3"
calamine = "0.24"
tokio-rustls = "0.25"
trash = "3"
percent-encoding = "2.3"
portable-pty = "0.8"
rfd = "0.15"
tauri-plugin-updater = "2.9"
tauri-plugin-process = "2.3"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["std"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL", "NSData", "NSError", "NSFileManager", "NSDate", "NSRunLoop", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSOpenPanel", "NSSavePanel", "NSPanel", "NSWindow", "NSResponder", "NSApplication", "NSRunningApplication"] }
core-foundation = "0.9"
security-framework = "2"
